[package]
name = "polonius"
version = "0.3.0"
authors = ["The Rust Project Developers", "Polonius Developers"]
description = "Core definition for the Rust borrow checker"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/polonius"
readme = "README.md"
keywords = ["compiler", "borrowck", "datalog"]
edition = "2018"

[dev-dependencies]
assert_cli = "0.6"
diff = "0.1.0"
polonius-parser = {version = "0.2.0", path = "polonius-parser" }

[dependencies]
env_logger = "0.5"
failure = "0.1.1"
rustc-hash = "1.0.0"
structopt = "0.2.8"
clap = "2.31.2"
polonius-engine = {version = "0.7.0", path = "polonius-engine" }

[workspace]
