[package]
name = "polonius"
version = "0.7.0"
authors = ["The Rust Project Developers", "Polonius Developers"]
description = "Core definition for the Rust borrow checker"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/polonius"
readme = "README.md"
keywords = ["compiler", "borrowck", "datalog"]
edition = "2018"

[dev-dependencies]
diff = "0.1.0"
polonius-parser = {version = "0.4.0", path = "polonius-parser" }

[dependencies]
rustc-hash = "1.0.0"
polonius-engine = {version = "0.12.0", path = "polonius-engine" }
log = "0.4"
petgraph = "0.4.13"
pico-args = "0.2"

[workspace]
