[package]
name = "polonius-docgen"
version = "0.1.0"
edition = "2018"
authors = ["The Rust Project Developers", "Polonius Developers"]
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/polonius"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
