[package]
name = "polonius-engine"
version = "0.12.1"
authors = ["The Rust Project Developers", "Polonius Developers"]
description = "Core definition for the Rust borrow checker"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/polonius"
readme = "README.md"
keywords = ["compiler", "borrowck", "datalog"]

[dependencies]
datafrog = "2.0.0"
rustc-hash = "1.0.0"
log = "0.4"
