[package]
name = "polonius-engine"
version = "0.14.0"
authors = ["The Rust Project Developers", "Polonius Developers"]
description = "Core definition for the Rust borrow checker"
license = "Apache-2.0/MIT"
repository = "https://github.com/rust-lang-nursery/polonius"
readme = "README.md"
keywords = ["compiler", "borrowck", "datalog"]
edition = "2018"

[dependencies]
contracts = "0.6.2"
datafrog = "2.0.0"
dyn-clone = "1.0.4"
log = "0.4"
paste = "1.0.6"
pretty_assertions = "1.0.0"
rustc-hash = "1.0.0"
smallvec = "1.8.0"
