[package]
name = "polonius-parser"
version = "0.4.0"
description = "Parser for the Polonius project"
license = "Apache-2.0/MIT"
authors = ["The Rust Project Developers"]
repository = "https://github.com/rust-lang-nursery/polonius"
build = "build.rs" # LALRPOP preprocessing

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "1.0.0"
