[package]
name        = "polonius-parser"
version     = "0.5.0"
description = "Parser for the Polonius project"
license     = "Apache-2.0/MIT"
authors     = ["The Rust Project Developers"]
repository  = "https://github.com/rust-lang-nursery/polonius"
edition     = "2018"

[dependencies]
logos = "0.12.0"
